--- a/BlackJackStyle.css
+++ b/BlackJackStyle.css
@@ -1,52 +1,66 @@
-    body {
-      margin: 0;
-      background-color: #0b3d0b;
-      font-family: Arial, sans-serif;
+body {
+    margin: 0;
+    background-color: #0b3d0b;
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  .mesa {
+      position: relative;
+      width: 1200px;
+      height: 700px;
+      background: radial-gradient(circle at center, #007700, #004400);
+      border: 10px solid #442200;
+      border-radius: 0 0 50% 50%;
+      overflow: hidden;
+      display: flex; 
+      flex-direction: column;
+  }
+
+  .lado-dealer {
+      position: relative;
+      width: 100%;
+      height: 30%;
+  }
+  .dealer {
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-weight: bold;
+    text-align: center;
+  }
+
+  .jugadores {
+      position: relative;
+      width: 100%;
+      height: 70%;
       display: flex;
-      justify-content: center;
+      justify-content: space-around;
       align-items: center;
-      height: 100vh;
-    }
-
-    .mesa {
-        position: relative;
-        width: 900px;
-        height: 500px;
-        background: radial-gradient(circle at center, #007700, #004400);
-        border: 10px solid #442200;
-        border-radius: 0 0 50% 50%;
-        overflow: hidden;
-        display: flex; 
-        flex-direction: column;
-    }
-
-    .lado-dealer {
+  }
+  
+  .p {
         position: relative;
         width: 100%;
-        height: 30%;
-    }
-    .dealer {
-      position: absolute;
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      color: white;
-      font-weight: bold;
-      text-align: center;
-    }
-
-    .jugadores {
-        position: relative;
-        width: 100%;
-        height: 70%;
+        height: 100%;
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
     }
 
-    .p4 {
-        bottom: 10rem;
-    }
-
-   
- 
+    .carta {
+        display: inline-block;
+        border: 1px solid #000;
+        border-radius: 5px;
+        padding: 8px;
+        margin: 4px;
+        font-size: 20px;
+        background-color: white;
+        width: 40px;
+        text-align: center;
+      }
